两个注册页面完成，分享按钮优化

--- a/pages/mine/join/join-template/join-template.wxml
+++ b/pages/mine/join/join-template/join-template.wxml
@@ -88,7 +88,7 @@
         <view>{{order1}}</view>
 
       </button>
-       <button  class="btn1" size='mini'  bindtap='ToShare'>分享</button>
+       <button  class="btn1" size='mini'  bindtap='ToShare' disabled='{{disable_exit}}' data-danhao='{{danhao}}'>分享</button>
   
    </view>
   </view>
