--- a/pages/pre-register/pre-register.wxss
+++ b/pages/pre-register/pre-register.wxss
@@ -15,6 +15,9 @@ page{
 
 
 }
+.check_icon{
+  float: right
+}
 
 .place-holder{
   font-weight: lighter;
@@ -107,6 +110,12 @@ page{
   background-color: #ffffff;
   font-weight: bold;
   color: #318aaa;
+  bottom: 5rpx;
+  left: 35%;
+  width: 30%;
+  font-weight: lighter;
+  background-color: #ffffff;
+  color: #0A6E92;
   display: flex;
   flex-direction: row;
   align-items: center;
